crates/tests/tests/valid/stuff-after-loop.wat
(module
  (type (;0;) (func (result i32)))
  (func (;0;) (type 0)
    loop
    end
    i32.const 1)
  (export "inf_loop_with_return" (func 0)))
